Fixed "about skin cancer" page overlapping main nav bar

--- a/src/app/main-nav/main-nav.component.css
+++ b/src/app/main-nav/main-nav.component.css
@@ -16,6 +16,7 @@
   color: black;
   top: 0;
   z-index: 999;
+  position: sticky;
 }
 
 button {
